--- a/style.css
+++ b/style.css
@@ -259,3 +259,9 @@ td, th {
     width: 560px;
     margin: 2em auto;
 }
+
+/* bula */
+.bula {
+    display: inline-block;
+    text-align: center;
+}
