--- a/style.css
+++ b/style.css
@@ -200,16 +200,20 @@ td, th {
 .utensilios {
     width: 120px;
     float: left;
-    margin: 0px 20px 0px 20px;
+    margin: 0% 5% 0% 10%;
 }
 
 .sobre-o-produto {
     line-height: 150%;
     padding-top: 1%;
+    text-align: justify;
+    font-size: 120%;
 }
 
 .missao{
     line-height: 150%;
+    text-align: justify;
+    font-size: 120%;
 }
 
 .mapa {
